--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   shared_preferences: ^2.2.2
   network_info_plus: ^4.1.0+1
   dio: ^5.4.1
+  flutter_launcher_icons: "^0.13.1"
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -20,3 +21,18 @@ flutter:
   uses-material-design: true
   assets:
     - assets/
+flutter_launcher_icons:
+  # android: "launcher_icon"
+  min_sdk_android: 21
+  image_path: "assets/logo.png"
+  adaptive_icon_foreground: "assets/logo.png"
+  background_color: "#000000"
+  theme_color: "#000000"
+  adaptive_icon_background: "#000000"
+  android:
+    generate: true
+    image_path: "assets/logo.png"
+    adaptive_icon_foreground: "assets/logo.png"
+    background_color: "#000000"
+    theme_color: "#000000"
+    adaptive_icon_background: "#000000"
